# GEOtreehealth

./: .coveragerc  .flake8  .gitignore  LICENSE  codecov.yml  config.py  main.py  prova.npy  pyproject.toml  requirements.txt  setup.cfg  setup.py  train.py
.github/workflows/: ci_cd.yml
field_data_alignment/: __init__.py  utils.py
lightning_logs/version_1/: hparams.yaml
tests/: build_dataloaders_test.py  delineation_pipeline_test.py  delineation_utils_tests.py  dgcnn_test.py  from_mask_to_polygons_tests.py  get_polygons_tests.py  hybridViTattention_test.py  multiModalNet_test.py  predict_tree_crowns_test.py  spectralAttention_test.py  split_image_test.py  store_data_structures_test.py  utils_test.py
tests/data/hsi/: 0.npy
tests/data/labels/: 0.csv
tests/data/rgb/: 0.npy
tree_delineation/: __init__.py  batch_sam.py  delineation_pipeline.py  delineation_utils.py  from_mask_to_polygons.py  full_image_sam.py  get_polygons.py  get_unique_polygons.py  rgb_hsi_fusion.py  sam_tree_masks.py  tree_top_detector.py
tree_delineation/SAM/: test_sam.py
tree_health_detection/: __init__.py  build_dataloaders.py  main.py  model_architecture.py  multimodal.py  spectral_attention.py  store_data_structures.py  tmp.py  train_val_t.py  utils.py  wang_dgcnn.py
tree_health_detection/src/: RGBModel.py  build_data_Schema.py  build_data_library_for_dataloaders.py  delineation_ensemble.py  delineation_utils.py  gb_field_realignment.py  get_itcs_polygons.py  get_tree_dataloaders.py  get_unique_polygons.py  get_uniques_polygons.py  hyperspectral_model.py  main.py  multimodal.py  point_net_lidar.py  train_val_t.py  train_val_test.py  utils.py
tree_health_detection/tests/: train_val_t_test.py  utils_test.py
