# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = GEOtreehealth
description = Neon data Wrangler
author = MarconiS
author_email = s.marconi@ufl.edu
license = MIT
license_files = LICENSE
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/MarconiS/GEOtreehealth/
# Add here related links, for example:
project_urls =
    Documentation = https://github.com/MarconiS/GEOtreehealth/
#    Source = https://github.com/
#    Changelog = https://
#    Tracker = https:
#    Conda-Forge = https://
#    Download = https://
#    Twitter = https://twitter.com/

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
;package_dir =
;    = GEOtreehealth
# Require a min/specific Python version (comma-separated conditions)
# python_requires = >=3.8

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    flake8-docstrings
    geopandas
    importlib-metadata; python_version<"3.8"
    comet_ml
    numpy
    opencv_python_headless
    pandas
    Pillow
    rasterio
    scikit_learn
    torch
    torchvision
    pandas
    pytest
    pytest-cov
    requests
    sphinx-press-theme
    toml
    tox
    yapf


[options.packages.find]
;where = GEOtreehealth
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install GEOtreehealth[PDF]` like:
# PDF = ReportLab; RXP

# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov

[options.entry_points]

console_scripts =
    GEOtreehealth = GEOtreehealth.__main__:main

[tool:pytest]
addopts =
    --cov GEOtreehealth --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 90
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.2.2
package = GEOtreehealth
